2010-10-07  Andreas Kupries  <andreask@activestate.com>

	* pt_tclparam_config_snit.man: Added pragmas for meta-data
	* pt_tclparam_config_snit.tcl: scanning to prevent the
	* pt_tclparam_config_tcloo.man: requirements of the embedded code
	* pt_tclparam_config_tcloo.tcl: template to be taken as the
	* pkgIndex.tcl: requirements of this package. Bumped versions to
	1.0.1.

2010-07-27  Andreas Kupries  <andreask@activestate.com>

	* pt_peg_interp.test: New files. Additional testsuites.
	* pt_runtime.test: Demonstrate the problem with X* and X?
	* tests/pt_peg_interp.tests: alone in a symbol, for modes
	* tests/pt_runtime.tests: leaf and value.

	* pt_peg_interp.tcl: Fixed two typos in comments.
	* pt_rdengine.test:

	* pt_astree.tcl: New constructor new0 for zero-length
	* pt_astree.man: nodes. Bumped version to 1.1
	
	* pt_rdengine_tcl.tcl: Use of the new constructor to handle
	* pt_rdengine.tcl: symbols whose RHS uses * or ? as toplevel
	* pt_rdengine.man: operator and did not match anything at runtime,
	  which is allowed. Bumped version to 1.0.1

	* pt_peg_interp.tcl: Some tweaks to the debug helper code (tracing
	* pt_rdengine_tcl.tcl: expressions and instructions).

	* pkgIndex.tcl: Bumped versions.

2010-07-09  Andreas Kupries  <andreask@activestate.com>

	* include/example/expr_json.inc: Fixed various typos in the JSON
	  example, i.e. missing closing double-quote, missing commas,
	  missing backslash quoting of forward slashes in strings.

2010-06-16  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* include/arch_core.dia: Navigational diagrams and images
	* include/arch_core.png:
	* include/arch_core_container.dia:
	* include/arch_core_container.png:
	* include/arch_core_eplugins.dia:
	* include/arch_core_eplugins.png:
	* include/arch_core_export.dia:
	* include/arch_core_export.png:
	* include/arch_core_import.dia:
	* include/arch_core_import.png:
	* include/arch_core_iplugins.dia:
	* include/arch_core_iplugins.png: