@@ -1,8 +1,8 @@
 [comment {-*- text -*- doctools manpage}]
-[manpage_begin pt::cparam::configuration::critcl n 1]
+[manpage_begin pt::cparam::configuration::critcl n 1.0.1]
 [include include/module.inc]
 [titledesc {C/PARAM, Canned configuration, Critcl}]
-[require pt::cparam::configuration::critcl [opt 1]]
+[require pt::cparam::configuration::critcl [opt 1.0.1]]
 [description]
 [include include/ref_intro.inc]
 
